feat: simplify friends and add site backups
